--- a/bower.json
+++ b/bower.json
@@ -18,6 +18,7 @@
     "mocha": "~2.0.1",
     "chai": "~1.10.0",
     "showdown": "~0.3.1",
-    "jquery": "~2.1.1"
+    "jquery": "~2.1.1",
+    "underscore": "~1.7.0"
   }
 }
